--- a/AstroGathering.csproj
+++ b/AstroGathering.csproj
@@ -18,5 +18,7 @@
       <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Google.Apis.Auth" Version="1.70.0" />
+    <PackageReference Include="Mysql.Data" Version="9.3.0" />
   </ItemGroup>
 </Project>
